Commit promoted backport of PR46401  *) mod_cache: Correctly save Content-Encoding of cachable entity. PR 46401     [Dan Poirier <poirier pobox.com>]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@727767 13f79535-47bb-0310-9956-ffa450edef68